--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
